--- a/demos/layered-arch/pom.xml
+++ b/demos/layered-arch/pom.xml
@@ -21,5 +21,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+<!--    insert mysql dependency-->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.27</version>
+    </dependency>
   </dependencies>
 </project>
