--- a/demos/ld-sb-rest-jpa-hib-crud-mvn/src/main/resources/application.properties
+++ b/demos/ld-sb-rest-jpa-hib-crud-mvn/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #update = creates table once / updates it next
 spring.jpa.hibernate.ddl-auto = update
 
-server.servlet.context-path=/ema
-server.port=9090
+#server.servlet.context-path=/ema
+#server.port=9090
