--- a/demos/ld-sb-rest-jpa-hib-crud-mvn/src/main/resources/application.properties
+++ b/demos/ld-sb-rest-jpa-hib-crud-mvn/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/SBDB1?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/SBDB1?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=mysql
 
