--- a/demos/microservice/fld2a-aws-product-microservice/src/main/resources/application.properties
+++ b/demos/microservice/fld2a-aws-product-microservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=product-service
-eureka.client.service-url.defaultZone=localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 server.port=8080
